# theaibench-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/theaibench/: __init__.py  cli.py
tests/: test_cli.py
