[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theaibench"
version = "0.1.0"
description = "Find the best local-AI model + setup for your hardware, from your terminal."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "The AI Bench" }]
keywords = [
    "local-ai", "llm", "ollama", "lm-studio", "local-llm", "gpu", "vram",
    "hardware", "inference", "cli", "qwen", "gemma", "mac", "apple-silicon",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = []  # zero third-party dependencies — standard library only

[project.urls]
Homepage = "https://theaibench.ai"
"Planner API" = "https://theaibench.ai/api/"
"For agents" = "https://theaibench.ai/for-agents/"
Source = "https://github.com/theaibench/theaibench-cli"

[project.scripts]
theaibench = "theaibench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/theaibench"]
